--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,11 +20,11 @@ main:
   - title: "Portfolio"
     url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  # - title: "Blog Posts"
+  #   url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: /files/Sajid_Javid_CV
     
   # - title: "CV"
   #   url: /cv-json/
