--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Sajid's Homepage"
+title                    : "Sajid Javid's Homepage"
 title_separator          : "-"
 name                     : &name "Sajid Javid"
 description              : &description "personal description"
