--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,7 +24,7 @@ main:
   #   url: /year-archive/
     
   - title: "CV"
-    url: "files/Sajid_Javid_CV.pdf"
+    url: "/files/Sajid_Javid_CV.pdf"
     
   # - title: "CV"
   #   url: /cv-json/
