--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,11 +17,11 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  # - title: "Portfolio"
-  #   url: /portfolio/
+  - title: "Portfolio"
+    url: /portfolio/
 
-  - title: "Professional Experience"
-    url: "/portfolio/
+  # - title: "Professional Experience"
+  #   url: "/portfolio/
         
 
     
