--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@ main:
   # - title: "Talks"
   #   url: /talks/    
 
-  - title: "Teaching"
+  - title: "Teaching Experience"
     url: /teaching/    
     
   - title: "Professional Experience"
